<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:layout_marginTop="@dimen/setting_scroll_margin_top"
            android:layout_marginBottom="@dimen/setting_scroll_margin_top"
            android:layout_marginLeft="@dimen/setting_scroll_margin_left"
            android:layout_marginStart="@dimen/setting_scroll_margin_left"
            android:layout_marginRight="@dimen/setting_scroll_margin_right"
            android:layout_marginEnd="@dimen/setting_scroll_margin_right">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speechspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/setting_tv_margin_bottom"
                    android:text="@string/txtSpeechSpeed"
                    style="@style/defaultTextViewStyle"
                    android:fontFamily="@font/mukta_semibold"/>
                <SeekBar
                    android:id="@+id/speed"
                    android:layout_width="@dimen/setting_seekbar_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/setting_seekbar_margin_bottom"
                    android:min="1"
                    android:max="100"
                    android:theme="@style/CustomSeekbar"
                    android:contentDescription="@string/seekbar_speed_cd"/>
                <TextView
                    android:id="@+id/voicepitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/setting_tv_margin_bottom"
                    android:text="@string/txtVoiceSpeech"
                    style="@style/defaultTextViewStyle"
                    android:fontFamily="@font/mukta_semibold"/>
                <SeekBar
                    android:id="@+id/pitch"
                    android:layout_width="@dimen/setting_seekbar_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/setting_seekbar_margin_bottom"
                    android:min="1"
                    android:max="100"
                    android:theme="@style/CustomSeekbar"
                    android:contentDescription="@string/seekbar_pitch_cd"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/setting_tv_margin_bottom"
                    android:text="@string/txtVoiceVolume"
                    style="@style/defaultTextViewStyle"
                    android:fontFamily="@font/mukta_semibold"/>
                <SeekBar
                    android:id="@+id/volume"
                    android:layout_width="@dimen/setting_seekbar_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/setting_seekbar_margin_bottom"
                    android:min="1"
                    android:max="15"
                    android:theme="@style/CustomSeekbar"
                    android:contentDescription="@string/seekbar_volume_cd"/>
                <Button
                    android:id="@+id/demo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_btn_height"
                    android:text="@string/txtDemo"
                    android:textSize="@dimen/setting_btn_txt_size"
                    android:layout_marginBottom="@dimen/setting_btn_margin_bottom"
                    android:paddingLeft="@dimen/setting_btn_padding_horizontal"
                    android:paddingRight="@dimen/setting_btn_padding_horizontal"/>
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin">
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@android:color/darker_gray"/>
                    <TableRow
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtDisplaySettings"
                            style="@style/defaultTextViewStyle"
                            android:fontFamily="@font/mukta_semibold"/>
                    </TableRow>
                    <TableRow
                        android:gravity="center_vertical"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="@dimen/settings_weight"
                            android:text="@string/txtDisplayMode"
                            style="@style/defaultTextViewStyle"/>
                        <Spinner
                            android:id="@+id/spinner3"
                            android:layout_width="@dimen/setting_spinner_width"
                            android:layout_height="@dimen/setting_spinner_height"
                            android:minWidth="@dimen/setting_spinner_min_width"
                            android:layout_weight="@dimen/settings_weight"
                            android:paddingRight="@dimen/setting_spinner_padding_right"
                            android:paddingEnd="@dimen/setting_spinner_padding_right"
                            android:background="@drawable/custom_spinner_view"
                            android:textColor="@color/black_eighty"/>
                    </TableRow>
                    <TableRow
                        android:gravity="center_vertical"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            android:text="@string/txtNumOfPerPerScr"
                            style="@style/defaultTextViewStyle"/>
                        <Spinner
                            android:id="@+id/spinner4"
                            android:layout_width="@dimen/setting_spinner_icon_width"
                            android:layout_height="@dimen/setting_spinner_icon_height"
                             android:layout_weight="@dimen/settings_weight"
                            android:background="@drawable/custom_spinner_view"
                            android:textColor="@color/black_eighty"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            android:text="@string/EnableDisplaySpeechText"
                            style="@style/defaultTextViewStyle"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchDisplaySpeechText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            style="@style/Material.Widget.Switch"
                            android:importantForAccessibility="yes"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            android:text="@string/enableBlackWhiteColor"
                            style="@style/defaultTextViewStyle"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchEnablemonochromeDisplay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            style="@style/Material.Widget.Switch"
                            android:importantForAccessibility="yes"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            android:text="@string/enableFishAnimation"
                            style="@style/defaultTextViewStyle"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchEnableAnimation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            style="@style/Material.Widget.Switch"
                            android:importantForAccessibility="yes"/>
                    </TableRow>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@android:color/darker_gray"/>
                    <TableRow
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtCustomisationSetting"
                            style="@style/defaultTextViewStyle"
                            android:fontFamily="@font/mukta_semibold"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            android:text="@string/enableIconAddition"
                            style="@style/defaultTextViewStyle"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchEnableIconAddition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            style="@style/Material.Widget.Switch"
                            android:importantForAccessibility="yes"/>
                    </TableRow>
                    <View
                        android:id="@+id/divider"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@android:color/darker_gray"/>
                    <TableRow
                        android:id="@+id/txtOtherSetting"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtOtherSetting"
                            style="@style/defaultTextViewStyle"
                            android:fontFamily="@font/mukta_semibold"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/rowOtherSetting"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/tv5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            android:text="@string/txtEnableBuiltInCalling"
                            style="@style/defaultTextViewStyle"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchEnableCall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:layout_weight="@dimen/settings_weight"
                            style="@style/Material.Widget.Switch"
                            android:importantForAccessibility="yes"/>
                    </TableRow>
                </TableLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_extra_space_height" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_bottom_bar_height"
        android:background="@color/menu_screen_bottom_bar"
        android:layout_alignParentBottom="true"
        android:importantForAccessibility="yes">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/setting_btn_height"
            android:text="@string/txtSave"
            android:textSize="@dimen/setting_btn_txt_size"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/setting_btn_padding_horizontal"
            android:paddingRight="@dimen/setting_btn_padding_horizontal"
            android:layout_marginLeft="@dimen/setting_btn_margin_left"
            android:layout_marginStart="@dimen/setting_btn_margin_left"/>
    </LinearLayout>
</RelativeLayout>